# extract-zip

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml  semantic.yml
.yarn/patches/: @napi-rs-cli-npm-3.6.2-b710c59d43.patch
bench/: bench.js  electron.js
scripts/: check-prebuilds.js  strip-binding-fallbacks.js
src/: lib.rs
test/: extract.test.js  make-fixtures.js  security.test.js
