[package]
name = "extract-zip"
version = "1.0.0"
edition = "2024"
license = "BSD-2-Clause"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
# deflate-zlib-ng: SIMD-accelerated inflate, ~2× over the default miniz_oxide.
# Only Deflate + Store — Electron release zips (and ~all real-world zips) use
# nothing else; zstd/lzma/bzip2/deflate64 were ~50 KB of dead decoders.
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-ng"] }
filetime = "0.2"
unicode-normalization = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
